--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <li>salonen@kennedys.dk</li>
         </ul>
        
-        <img src="imgs/logo.footer.png" alt="Kennedys logo med firma navn og figur der ligner en kjole">
+        <img src="imgs/logo.footer.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole">
     </footer>
 </body>
 </html>
