Materialer - struktur done
Underside igangsat

--- a/html/materialer.html
+++ b/html/materialer.html
@@ -11,6 +11,15 @@
 </head>
 <body>
     <header>
+         <!-- Start af big photo-->
+         <section class="cover">
+            <video autoplay loop muted id="bigphoto" >
+                <source src="../imgs/bigphotointro.webm" type="video/webm">
+                Your browser does not support the video tag. 
+            </video>
+        </section>
+        <!-- Slut på big photo -->
+
         <!-- Start af navigations bar -->
         <nav>
             <a href="../index.html"><img  class="left-icon" src="../imgs/logo-endelig.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole"></a>
@@ -36,53 +45,50 @@
             </ul>
         </nav>
         <!-- Slut af navigations bar -->
-
-        <!-- Start af big photo-->
-        <img href="" alt="">
-        <!-- Slut på big photo -->
     </header>
 
     <main>
 
         <h1 class="matrialer titel">Matrialer</h1>
-        <img href="" alt="">
+        <img class="infographic" src="../imgs/infographic-klar-til-site.webp" alt="Infographic, der illustrerer de forskellige materialer i en brudekjole, herunder satin, silke, blonde, tyl, organza og crepe.">
         <section class="matriale-billeder">
             <figure class="billede-box">
-                <img class="matrialer" src="" alt="">
+                <img class="matrialer" src="../imgs/chiffon-matriale-billede.webp" alt="Brudekjole i let og elegant chiffon, der giver et romantisk og luftigt udtryk.">
                 <figcaption class="overlay-text">CHIFFON</figcaption>
             </figure>
             <figure class="billede-box">
-                <img class="matrialer" src="" alt="">
+                <img class="matrialer" src="../imgs/organza-matriale-billede.webp" alt="Brudekjole i let og struktureret organza, som skaber et fyldigt og elegant look.">
                 <figcaption class="overlay-text">ORGANZA</figcaption>
             </figure>
             <figure class="billede-box">
-                <img class="matrialer" src="" alt="">
+                <img class="matrialer" src="../imgs/satin-matriale-billede.webp" alt="Elegant brudekjole i glat og skinnende satin for et klassisk og luksuriøst look.">
                 <figcaption class="overlay-text">SATIN</figcaption>
             </figure>
             <figure class="billede-box">
-                <img class="matrialer" src="" alt="">
+                <img class="matrialer" src="../imgs/tyl-matriale-billede.webp" alt="Romantisk brudekjole i let og luftig tyl, der skaber et drømmende og voluminøst udtryk.">
                 <figcaption class="overlay-text">TYL</figcaption>
             </figure>
             <figure class="billede-box">
-                <img class="matrialer" src="" alt="">
+                <img class="matrialer" src="../imgs/crepe-matrialer-billede.webp" alt="Elegant brudekjole i blød og figursyet crepe, der giver et moderne og stilrent look.">
                 <figcaption class="overlay-text">CREPE</figcaption>
             </figure>
             <figure class="billede-box">
-                <img class="matrialer" src="" alt="">
+                <img class="matrialer" src="../imgs/blonder-matriale-billede.webp" alt="Romantisk brudekjole i delikat blonde med fine detaljer for et klassisk og feminint look.">
                 <figcaption class="overlay-text">BLONDER</figcaption>
             </figure>
             <figure class="billede-box">
-                <img class="matrialer" src="" alt="">
+                <img class="matrialer" src="../imgs/mikado-matrialer-billede.webp" alt="Elegant brudekjole i struktureret mikado-stof, der giver et luksuriøst og skarpt look.">
                 <figcaption class="overlay-text">MIKADO</figcaption>
             </figure>
             <figure class="billede-box">
-                <img class="matrialer" src="" alt="">
+                <img class="matrialer" src="../imgs/perler-matriale-billede.webp" alt="Elegant brudekjole med smukke perledetaljer, der tilføjer glans og elegance.">
                 <figcaption class="overlay-text">PERLER</figcaption>
             </figure>
         </section>
     </main>
 
     <footer>
+        <img src="../imgs/logo.footer.webp" alt="Kennedys logo">
         <h2>Kontakt</h2>
         <ul>
             <li>Kennedys</li>
