start på CSS på kategori siden

--- a/html/kategorier.html
+++ b/html/kategorier.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Find din drømmebrudekjole hos os. Stort udvalg af elegante brudekjoler i alle stilarter og størrelser. Book prøvning og få ekspert rådgivning. Gratis fragt ved køb.">
     <meta name="keywords" content="Brudekjole, Brudekjoler, Vintage brudekjoler, Køb af brudekjole, Køb af brudekjoler, Brudekjole trends, Brudekjole trends 2025, Brudekjoler med lange ærmer, Brudekjole med lange ærmer og blonder, Billige brudekjoler, Billig brudekjole">
     <link rel="icon" type="image/x-icon" href="../imgs/logo-endelig.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/kategorier.css">
     <title>Kennedys</title>
 </head>
 <body>
@@ -38,42 +38,44 @@
         <!-- Slut af navigations bar -->
 
         <!-- Start af big photo-->
+         <section class="cover-photo">
         <img src="../imgs/big-photo-kategori.webp" alt="Kvinde der læner sig op af ræling med en tætsiddende brudekjole med blomster på">
+        </section>
         <!-- Slut på big photo -->
     </header>
     <main>
-        <h1 class="Kategori titel">Kategorier</h1>
+        <h1 class="kategori-titel">Kategorier</h1>
         <section class="kategori-billeder">
             <figure class="billede-box">
-                <img class="Kategorier" src="../imgs/matrialer-kategori-billede.webp" alt="Brudekjole med sløjfe">
+                <img class="kategorier" src="../imgs/matrialer-kategori-billede.webp" alt="Brudekjole med sløjfe">
                 <figcaption class="overlay-text">MATRIALER</figcaption>
             </figure>
             <figure class="billede-box">
-                <img class="Kategorier" src="../imgs/prinsesse-kategori-billede.webp" alt="Prinsesse brudekjole">
+                <img class="kategorier" src="../imgs/prinsesse-kategori-billede.webp" alt="Prinsesse brudekjole">
                 <figcaption class="overlay-text">PRINSESSE</figcaption>
             </figure>
             <figure class="billede-box">
-                <img class="Kategorier" src="../imgs/a-facon-kategori-billede.webp" alt="A-facon brudekjole">
+                <img class="kategorier" src="../imgs/a-facon-kategori-billede.webp" alt="A-facon brudekjole">
                 <figcaption class="overlay-text">A-FACON</figcaption>
             </figure>
             <figure class="billede-box">
-                <img class="Kategorier" src="../imgs/havfrue-kategori-billede.webp" alt="Brudekjole havfrue">
+                <img class="kategorier" src="../imgs/havfrue-kategori-billede.webp" alt="Brudekjole havfrue">
                 <figcaption class="overlay-text">HAVFRUE</figcaption>
             </figure>
             <figure class="billede-box">
-                <img class="Kategorier" src="../imgs/fitandflare-kategori-billede.webp" alt="tætsiddende brudekjole">
+                <img class="kategorier" src="../imgs/fitandflare-kategori-billede.webp" alt="tætsiddende brudekjole">
                 <figcaption class="overlay-text">FIT AND FLARE</figcaption>
             </figure>
             <figure class="billede-box">
-                <img class="Kategorier" src="../imgs/stropløs-kategori-billede.webp" alt="Stropløs brudekjole">
+                <img class="kategorier" src="../imgs/stropløs-kategori-billede.webp" alt="Stropløs brudekjole">
                 <figcaption class="overlay-text">STROPLØS</figcaption>
             </figure>
             <figure class="billede-box">
-                <img class="Kategorier" src="../imgs/langeærmer-kategori-billede.webp" alt="Brudekjole med lange ærmer">
+                <img class="kategorier" src="../imgs/langeærmer-kategori-billede.webp" alt="Brudekjole med lange ærmer">
                 <figcaption class="overlay-text">LANGE ÆRMER</figcaption>
             </figure>
             <figure class="billede-box">
-                <img class="Kategorier" src="../imgs/dybryg-kategori-billede.webp" alt="Brudekjole med dyb ryg">
+                <img class="kategorier" src="../imgs/dybryg-kategori-billede.webp" alt="Brudekjole med dyb ryg">
                 <figcaption class="overlay-text">DYB RYG</figcaption>
             </figure>
         </section>
