forside tekst box

--- a/index.html
+++ b/index.html
@@ -54,29 +54,21 @@
     <main>
         <h1 class="forside-titel">Vores Bestseller</h1>
         <section class="forside-billeder">
-            <section id="bestseller1">
-                <!-- <img class="bestseller" src="imgs/bestseller-billede1.webp" alt="Billede af en brudekjole model der står opad et gammel dags metal vindue, iført en brudekjole med detaljeret top"> -->
-                <section class="overlay">
+            <section class="container">
+                <img class="bestseller" src="imgs/bestseller-billede1.webp" alt="Billede af en brudekjole model der står opad et gammel dags metal vindue, iført en brudekjole med detaljeret top">
                 <p class="mobil-tekst">Mærke, Kollektion, Designer</p>
-                </section>
             </section>
-            <section id="bestseller2">
-                <!-- <img class="bestseller" src="imgs/bestseller-billede2.webp" alt="Billede af en brudekjole model der står i en slots have, iført en brudekjole med blad design på kjolen"> -->
-                <section class="overlay">
+            <section class="container">
+                <img class="bestseller" src="imgs/bestseller-billede2.webp" alt="Billede af en brudekjole model der står i en slots have, iført en brudekjole med blad design på kjolen">
                 <p class="mobil-tekst">Mærke, Kollektion, Designer</p>
-                </section>
             </section>
-            <section id="bestseller3">
-                <!-- <img class="bestseller" src="imgs/bestseller-billede3.webp" alt="Billede af en brudekjole model der står med ryggen til kamaraet, iført en kjole med blomster detajler"> -->
-                <section class="overlay">
+            <section class="container">
+                <img class="bestseller" src="imgs/bestseller-billede3.webp" alt="Billede af en brudekjole model der står med ryggen til kamaraet, iført en kjole med blomster detajler">
                 <p class="mobil-tekst">Mærke, Kollektion, Designer</p>
-                </section>
             </section>
-            <section id="bestseller4">
-                <!-- <img class="bestseller" src="imgs/bestseller-billede4.webp" alt="Billede af en brudekjole model der står foran en metal port, iført en detaljeret kjole med massere af tyl i bunden"> -->
-                <section class="overlay">
+            <section class="container">
+                <img class="bestseller" src="imgs/bestseller-billede4.webp" alt="Billede af en brudekjole model der står foran en metal port, iført en detaljeret kjole med massere af tyl i bunden">
                 <p class="mobil-tekst">Mærke, Kollektion, Designer</p>
-                </section>
             </section>
         </section>
         <!-- luft imellem sektioner -->
