--- a/html/prinsesse.html
+++ b/html/prinsesse.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Find din drømmebrudekjole hos os. Stort udvalg af elegante brudekjoler i alle stilarter og størrelser. Book prøvning og få ekspert rådgivning. Gratis fragt ved køb.">
     <meta name="keywords" content="Brudekjole, Brudekjoler, Vintage brudekjoler, Køb af brudekjole, Køb af brudekjoler, Brudekjole trends, Brudekjole trends 2025, Brudekjoler med lange ærmer, Brudekjole med lange ærmer og blonder, Billige brudekjoler, Billig brudekjole">
     <link rel="icon" type="image/x-icon" href="../imgs/logo-endelig.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/prinsesse.css">
     <title>Kennedys</title>
 </head>
 <body>
@@ -37,12 +37,17 @@
         </nav>
         <!-- Slut af navigations bar -->
 
-        <!-- Start af big photo-->
-        <img src="../imgs/big-photo-prinsesse.webp" alt="Kvinde set fra ryggen med stropløs brudekjole på">
-        <!-- Slut på big photo -->
     </header>
     <main>
-        <h1 class="prinsesse-titel">PRINSESSE</h1>
+
+        <section class="baggrund1"> 
+            <article class="textbox">
+                <h1>PRINSESSE</h1> 
+            </article>
+            
+        </section>
+
+        
         <section class="prinsesse-billeder">
             <figure class="billede-box">
                 <img class="prinsesse" src="../imgs/prisesse-billede1.webp" alt="Kvinde står i en have med en stropløs brudekjole på set fra siden">
@@ -120,7 +125,7 @@
             <input type="submit" value="Indsend">
         </form>
         <!-- Slut på formular -->
-        <img src="../imgs/logo-endelig.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole">
+        <img src="../imgs/logo.footer.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole">
     </footer>
 </body>
 </html>
