--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
         <span class="whitespace"></span>
         <!-- slut på luft -->
         <section class="reviews">
-            <img class="review-background" src="imgs/" alt="">
             <article class="review-1">
                 <h2 class="review-titel">Skønneste team</h2>
                 <p class="review-tekst">Havde prøvet ikke mindre end 30 kjoler før jeg fandt jer. Havde følelsen af ikke at blive 
@@ -86,11 +85,13 @@
                     jeres fantastiske profesionelle indsats og i gør alt for at det hele kan 
                     lykkedes og man sammen kommer i mål så tak.</p>
                 <!-- stjerneikoner start -->
-                <img class="fas" src="imgs/star-icon-full.svg"></img>
-                <img class="fas" src="imgs/star-icon-full.svg"></img>
-                <img class="fas" src="imgs/star-icon-full.svg"></img>
-                <img class="fas" src="imgs/star-icon-full.svg"></img>
-                <img class="fas" src="imgs/star-icon-full.svg"></img>
+                <section class="rating">
+                    <img class="fas" src="imgs/star-icon-full.svg"></img>
+                    <img class="fas" src="imgs/star-icon-full.svg"></img>
+                    <img class="fas" src="imgs/star-icon-full.svg"></img>
+                    <img class="fas" src="imgs/star-icon-full.svg"></img>
+                    <img class="fas" src="imgs/star-icon-full.svg"></img>
+                </section>
                 <!-- stjerneikoner slut -->
             </article>
             <article class="review-2">
@@ -101,11 +102,13 @@
                     Jeg ville ønske, at jeg kunne huske, hvad hende fra Kennedys, 
                     som hjalp mig, hedder, for hun var rigtig dygtig.</p>
                 <!-- stjerneikoner start -->
-                <img class="fas" src="imgs/star-icon-full.svg"></img>
-                <img class="fas" src="imgs/star-icon-full.svg"></img>
-                <img class="fas" src="imgs/star-icon-full.svg"></img>
-                <img class="fas" src="imgs/star-icon-full.svg"></img>
-                <img class="fas" src="imgs/star-icon-full.svg"></img>
+                <section class="rating">
+                    <img class="fas" src="imgs/star-icon-full.svg"></img>
+                    <img class="fas" src="imgs/star-icon-full.svg"></img>
+                    <img class="fas" src="imgs/star-icon-full.svg"></img>
+                    <img class="fas" src="imgs/star-icon-full.svg"></img>
+                    <img class="fas" src="imgs/star-icon-full.svg"></img>
+                </section>
                 <!-- stjerneikoner slut -->
             </article>
         </section>
