tekst over billed

--- a/html/prinsesse.html
+++ b/html/prinsesse.html
@@ -36,18 +36,15 @@
             </ul>
         </nav>
         <!-- Slut af navigations bar -->
-
-    </header>
-    <main>
-
-        <section class="baggrund1"> 
-            <article class="textbox">
-                <h1>PRINSESSE</h1> 
-            </article>
-            
+        <section class="container">
+            <img class="bestseller" src="../imgs/prinsesse-kategori-billede.webp" alt="Billede af en brudekjole model der står opad et gammel dags metal vindue, iført en brudekjole med detaljeret top">
+            <h1>PRINSESSE</h1> 
         </section>
-
+        </section>
         
+    </header>
+
+    <main>
         <section class="prinsesse-billeder">
             <figure class="billede-box">
                 <img class="prinsesse" src="../imgs/prisesse-billede1.webp" alt="Kvinde står i en have med en stropløs brudekjole på set fra siden">
