--- a/html/kategorier.html
+++ b/html/kategorier.html
@@ -39,12 +39,12 @@
 
         <!-- Start af big photo-->
          <section class="cover-photo">
-        <img src="../imgs/big-photo-kategori.webp" alt="Kvinde der læner sig op af ræling med en tætsiddende brudekjole med blomster på">
+        <img src="../imgs/bestseller-billede1.webp" alt="Kvinde der læner sig op af ræling med en tætsiddende brudekjole med blomster på">
         </section>
+        <h1 class="kategori-titel">KATEGORIER</h1>
         <!-- Slut på big photo -->
     </header>
     <main>
-        <h1 class="kategori-titel">Kategorier</h1>
         <section class="kategori-billeder">
             <figure class="billede-box">
                 <img class="kategorier" src="../imgs/matrialer-kategori-billede.webp" alt="Brudekjole med sløjfe">
