Css for kategorier for tablet

--- a/html/kategorier.html
+++ b/html/kategorier.html
@@ -98,6 +98,7 @@
             <li>salonen@kennedys.dk</li>
         </ul>
         <!-- Formular til at booke en tid -->
+        <h2>Booking</h2>
         <form>
             <label for="navn">Navn</label>
             <input type="text" id="navn" name="navn">
@@ -108,7 +109,7 @@
             <input type="submit" value="Indsend">
         </form>
         <!-- Slut på formular -->
-        <img src="../imgs/logo-endelig.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole">
+        <img src="../imgs/logo.footer.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole">
     </footer>
 </body>
 </html>
