forside mobil done

--- a/index.html
+++ b/index.html
@@ -56,23 +56,23 @@
         <section class="forside-billeder">
             <section class="container">
                 <img class="bestseller" src="imgs/bestseller-billede1.webp" alt="Billede af en brudekjole model der står opad et gammel dags metal vindue, iført en brudekjole med detaljeret top">
-                <p class="mobil-tekst">Mærke, Kollektion, Designer</p>
+                <p class="mobil-tekst"><span class="bestname">Darana</span>Divine Collection by Modeca</p>
             </section>
             <section class="container">
                 <img class="bestseller" src="imgs/bestseller-billede2.webp" alt="Billede af en brudekjole model der står i en slots have, iført en brudekjole med blad design på kjolen">
-                <p class="mobil-tekst">Mærke, Kollektion, Designer</p>
+                <p class="mobil-tekst"><span class="bestname">Dawn</span>Divine Collection by Modeca</p>
             </section>
             <section class="container">
                 <img class="bestseller" src="imgs/bestseller-billede3.webp" alt="Billede af en brudekjole model der står med ryggen til kamaraet, iført en kjole med blomster detajler">
-                <p class="mobil-tekst">Mærke, Kollektion, Designer</p>
+                <p class="mobil-tekst"><span class="bestname">Debra</span>Divine Collection by Modeca</p>
             </section>
             <section class="container">
                 <img class="bestseller" src="imgs/bestseller-billede4.webp" alt="Billede af en brudekjole model der står foran en metal port, iført en detaljeret kjole med massere af tyl i bunden">
-                <p class="mobil-tekst">Mærke, Kollektion, Designer</p>
+                <p class="mobil-tekst"><span class="bestname">Dasha</span>Divine Collection by Modeca</p>
             </section>
         </section>
         <!-- luft imellem sektioner -->
-        <span class="whitespace"></span>
+        <section class="whitespace"></section>
         <!-- slut på luft -->
         <section class="reviews">
             <article class="review-1">
