--- a/html/kategorier.html
+++ b/html/kategorier.html
@@ -38,9 +38,12 @@
         <!-- Slut af navigations bar -->
 
         <!-- Start af big photo-->
-         <section class="cover-photo">
-        <img src="../imgs/bestseller-billede1.webp" alt="Kvinde der læner sig op af ræling med en tætsiddende brudekjole med blomster på">
+         <section class="cover-photo-mobil-tablet">
+        <img src="../imgs/bestseller-billede1.webp" alt="Kvinde der står indendørs iført brudekjole med blomster på">
         </section>
+        <section class="cover-photo-computer">
+            <img src="../imgs/big-photo-kategori.webp" alt="Kvinde der læner sig op af ræling med en tætsiddende brudekjole med blomster på">
+            </section>
         <h1 class="kategori-titel">KATEGORIER</h1>
         <!-- Slut på big photo -->
     </header>
@@ -81,22 +84,6 @@
         </section>
         
     </main>
-
-    <footer>
-        <h2>Kontakt</h2>
-        <ul>
-            <li>Kennedys</li>
-            <li>Astervej 9</li>
-            <li>8471 Sabro</li>
-            <li>Danmark</li>
-            <li>CVR-nummer: 28934874</li>
-        </ul>
-        <ul>
-            <li>Telefon nr:</li>
-            <li>+4586495200</li>
-            <li>E-mail: </li>
-            <li>salonen@kennedys.dk</li>
-        </ul>
         <!-- Formular til at booke en tid -->
         <h2>Booking</h2>
         <form>
@@ -110,6 +97,22 @@
         </form>
         <!-- Slut på formular -->
         <img src="../imgs/logo.footer.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole">
+        <footer>
+            <h2>Kontakt</h2>
+            <ul>
+                <li>Kennedys</li>
+                <li>Astervej 9</li>
+                <li>8471 Sabro</li>
+                <li>Danmark</li>
+                <li>CVR-nummer: 28934874</li>
+            </ul>
+            <ul>
+                <li>Telefon nr:</li>
+                <li>+4586495200</li>
+                <li>E-mail: </li>
+                <li>salonen@kennedys.dk</li>
+            </ul>
+    
     </footer>
 </body>
 </html>
