--- a/html/prinsesse.html
+++ b/html/prinsesse.html
@@ -36,12 +36,13 @@
             </ul>
         </nav>
         <!-- Slut af navigations bar -->
-        <section class="container">
-            <img class="bestseller" src="../imgs/prinsesse-kategori-billede.webp" alt="Billede af en brudekjole model der står opad et gammel dags metal vindue, iført en brudekjole med detaljeret top">
-            <h1>PRINSESSE</h1> 
-        </section>
-        </section>
 
+        <!-- Start af big photo-->
+         <section class="cover-photo">
+        <img src="../imgs/prinsesse-kategori-billede.webp" alt="Kvinde der læner sig op af ræling med en tætsiddende brudekjole med blomster på">
+        </section>
+        <h1 class="prinsesse-titel">PRINSESSE</h1>
+        <!-- Slut på big photo -->
     </header>
 
     <main>
@@ -49,70 +50,67 @@
             <figure class="billede-box">
                 <img class="prinsesse" src="../imgs/prisesse-billede1.webp" alt="Kvinde står i en have med en stropløs brudekjole på set fra siden">
                 <figcaption class="overlay-text">
-                    <h2></h2>
-                    <p></p>
+                    <h2> Janelle</h2>
+                    <p> Tulle ball gown with off-shoulder neckline </p>
                 </figcaption>
+            </figure>
             <figure class="billede-box">
                 <img class="prinsesse" src="../imgs/prinsesse-billede2.webp" alt="Kvinde iført brudekjole med puffærmer står i et rum set fra siden">
                 <figcaption class="overlay-text">
-                    <h2></h2>
-                    <p></p>
+                    <h2> Infinity</h2>
+                    <p> Tulle ball gown with puff sleeves </p>
                 </figcaption>
+            </figure>
             <figure class="billede-box">
                 <img class="prinsesse" src="../imgs/prinsesse-billede3.webp" alt="Kvinde står i en have med brudekjole på set fra fronten">
                 <figcaption class="overlay-text">
-                    <h2></h2>
-                    <p></p>
+                    <h2> Gibson</h2>
+                    <p> Soft wedding dress with V-neckline  </p>
                 </figcaption>
+            </figure>
             <figure class="billede-box">
                 <img class="prinsesse" src="../imgs/prinsesse-billede4.webp" alt="Kvinde iført brudekjole med blomsterprint står i en gårdsplads med ryggen til">
                 <figcaption class="overlay-text">
-                    <h2></h2>
-                    <p></p>
+                    <h2> Hosanna</h2>
+                    <p> Tulle ball gown with plunging v-neckline </p>
                 </figcaption>
-                <figure class="billede-box">
-                    <img class="prinsesse" src="../imgs/prinsesse-billede5.webp" alt="Kvinde iført stropløsbrudekjole står ved en væg fronten til">
-                    <figcaption class="overlay-text">
-                        <h2></h2>
-                        <p></p>
-                    </figcaption>
+            </figure>
+            <figure class="billede-box">
+                <img class="prinsesse" src="../imgs/prinsesse-billede5.webp" alt="Kvinde iført stropløsbrudekjole står ved en væg fronten til">
+                <figcaption class="overlay-text">
+                    <h2> Everette</h2>
+                    <p> Clean ball gown with strapless notched neckline </p>
+                </figcaption>
+            </figure>
             <figure class="billede-box">
                 <img class="prinsesse" src="../imgs/prinsesse-billede6.webp" alt="Kvinde iført stropløsbrudekjole med blonder står i en gård med ryggen til">
                 <figcaption class="overlay-text">
-                    <h2></h2>
-                    <p></p>
+                    <h2> Julia</h2>
+                    <p> Strapless lace ball gown with cuff detail </p>
                 </figcaption>
+            </figure>
             <figure class="billede-box">
                 <img class="prinsesse" src="../imgs/prinsesse-billede7.webp" alt="Kvinde iført brudekjole med tyldetalje ved hoften, står på gaden med fronten til">
                 <figcaption class="overlay-text">
-                    <h2></h2>
-                    <p></p>
+                    <h2> Hayden</h2>
+                    <p> Fit and flare wedding dress</p>
                 </figcaption>
+            </figure>
             <figure class="billede-box">
                 <img class="prinsesse" src="../imgs/prinsesse-billede8.webp" alt="Kvinde iført brudekjole står i et vindue med fronten til">
                 <figcaption class="overlay-text">
-                    <h2></h2>
-                    <p></p>
-                    </figcaption>
-            </section>
+                    <h2> Janessa</h2>
+                    <p> Ruffle skirt with lace bodice ball gown</p>
+                </figcaption>
+            </figure>
+        </section>
+        
     </main>
+
     <footer>
-        <h2>Kontakt</h2>
-        <ul>
-            <li>Kennedys</li>
-            <li>Astervej 9</li>
-            <li>8471 Sabro</li>
-            <li>Danmark</li>
-            <li>CVR-nummer: 28934874</li>
-        </ul>
-        <ul>
-            <li>Telefon nr:</li>
-            <li>+4586495200</li>
-            <li>E-mail: </li>
-            <li>salonen@kennedys.dk</li>
-        </ul>
-        <!-- Formular til at booke en tid -->
-        <form>
+        <h2>Book en tid</h2>
+         <!-- Formular til at booke en tid -->
+         <form>
             <label for="navn">Navn</label>
             <input type="text" id="navn" name="navn">
             <label for="e-mail">E-mail</label>
@@ -122,7 +120,44 @@
             <input type="submit" value="Indsend">
         </form>
         <!-- Slut på formular -->
+
+        <h2>Kontakt</h2> 
+        <ul class="kontakt1">
+            <li>Kennedys</li>
+            <li>Astervej 9</li>
+            <li>8471 Sabro</li>
+            <li>Danmark</li>
+            <li>CVR-nummer: 28934874</li>
+        </ul>
+        <ul class="kontakt2">
+            <li>Telefon nr:</li>
+            <li>+4586495200</li>
+            <li>E-mail: </li>
+            <li>salonen@kennedys.dk</li>
+        </ul>
+       
         <img src="../imgs/logo.footer.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole">
     </footer>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
