--- a/index.html
+++ b/index.html
@@ -77,11 +77,7 @@
         <section class="reviews">
             <article class="review-1">
                 <h2 class="review-titel">Skønneste team</h2>
-                <p class="review-tekst">Havde prøvet ikke mindre end 30 kjoler før jeg fandt jer. Havde følelsen af ikke at blive 
-                    mødt og vejledt .Jeg var grædefærdig og havde næsten opgivet projektet . 
-                    Signe hjalp mig igennem min proces og hun er simpelt intet mindre end vanvittig 
-                    professionel, nærværende , empatisk og skide 
-                    sjov! Jeg har fundet kjolen ved jer , min kjole. Tak for 
+                <p class="review-tekst">Havde prøvet ikke mindre end 30 kjoler før jeg fandt jer. Tak for 
                     jeres fantastiske profesionelle indsats og i gør alt for at det hele kan 
                     lykkedes og man sammen kommer i mål så tak.</p>
                 <!-- stjerneikoner start -->
@@ -97,10 +93,7 @@
             <article class="review-2">
                 <h2 class="review-titel">Min drømme kjole</h2>
                 <p class="review-tekst">Jeg fandt min drømmebrudekjole hos Kennedys. De var rigtig dygtige 
-                    til at hjælpe mig med at finde, hvad der passer godt til min krop og 
-                    kropsfacon - og rådgive efter det og min stil. 
-                    Jeg ville ønske, at jeg kunne huske, hvad hende fra Kennedys, 
-                    som hjalp mig, hedder, for hun var rigtig dygtig.</p>
+                    til at hjælpe og rådgive mig.</p>
                 <!-- stjerneikoner start -->
                 <section class="rating">
                     <img class="fas" src="imgs/star-icon-full.svg"></img>
