--- a/html/kategorier.html
+++ b/html/kategorier.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="booking.html">Booking</a></li>
-                <li><a href="kategorier.html">kategorier</a>
+                <li><a href="kategorier.html">Kategorier</a>
                     <!-- Fold ud menu når man hover over kategorier -->
                     <ul>
                         <li><a href="materialer.html">Materialer</a></li>
@@ -42,7 +42,7 @@
         <img src="../imgs/bestseller-billede1.webp" alt="Kvinde der står indendørs iført brudekjole med blomster på">
         </section>
         <section class="cover-photo-computer">
-            <img src="../imgs/big-photo-kategori.webp" alt="Kvinde der læner sig op af ræling med en tætsiddende brudekjole med blomster på">
+            <img src="../imgs/big-photo-kategorier.webp" alt="Kvinde der læner sig op af ræling med en tætsiddende brudekjole med blomster på">
             </section>
         <h1 class="kategori-titel">KATEGORIER</h1>
         <!-- Slut på big photo -->
@@ -52,8 +52,9 @@
             <figure class="billede-box">
                 <img class="kategorier" src="../imgs/matrialer-kategori-billede.webp" alt="Brudekjole med sløjfe">
                 <figcaption class="overlay-text">MATRIALER</figcaption>
-            </figure>
+                </figure>
             <figure class="billede-box">
+                <a href="prinsesse.html"></a>
                 <img class="kategorier" src="../imgs/prinsesse-kategori-billede.webp" alt="Prinsesse brudekjole">
                 <figcaption class="overlay-text">PRINSESSE</figcaption>
             </figure>
