--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
                         lykkedes og man sammen kommer i mål så tak.</p>
                     <!-- stjerneikoner start -->
                     <section class="rating">
-                        <img class="fas" src="imgs/star-icon-full.svg"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg"></img>
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
                     </section>
                     <!-- stjerneikoner slut -->
                 </article>
@@ -96,11 +96,11 @@
                     <p class="review-tekst">Så flot og stilfuld butik. Jeg besøgte den flotte hjemmeside først og følte mig så inspireret og klar til at købe min kjole.</p>
                     <!-- stjerneikoner start -->
                     <section class="rating">
-                        <img class="fas" src="imgs/star-icon-full.svg"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg"></img>
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
                     </section>
                     <!-- stjerneikoner slut -->
                 </article>
@@ -112,11 +112,11 @@
                         til at hjælpe og rådgive mig.</p>
                     <!-- stjerneikoner start -->
                     <section class="rating">
-                        <img class="fas" src="imgs/star-icon-full.svg"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg"></img>
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
                     </section>
                     <!-- stjerneikoner slut -->
                 </article>
@@ -125,11 +125,11 @@
                     <p class="review-tekst">Havde simpelthen den bedste oplevelse ved Kennedys, personalet var søde og imødekommende. De havde dog ikke lige så mange muligheder som jeg havde håbet på, men vil varmt anbefale dem.</p>
                     <!-- stjerneikoner start -->
                     <section class="rating">
-                        <img class="fas" src="imgs/star-icon-full.svg"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg"></img>
-                        <img class="fas" src="imgs/star-icon-half.svg"></img>
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
+                        <img class="fas" src="imgs/star-icon-half.svg" alt="En halv udfyldt stjerne i en blød hvid"></img>
                     </section>
                     <!-- stjerneikoner slut -->
                 </article>
