--- a/html/kategorier.html
+++ b/html/kategorier.html
@@ -39,7 +39,7 @@
 
         <!-- Start af big photo-->
          <section class="cover-photo-mobil-tablet">
-        <img src="../imgs/bestseller-billede1.webp" alt="Kvinde der står indendørs iført brudekjole med blomster på">
+        <img src="../imgs/kategori-billede-mobil.webp" alt="Kvinde der står indendørs iført brudekjole med blomster på">
         </section>
         <section class="cover-photo-computer">
             <img src="../imgs/big-photo-kategorier.webp" alt="Kvinde der læner sig op af ræling med en tætsiddende brudekjole med blomster på">
@@ -91,27 +91,30 @@
             <section class="footer-section booking-form">
                 <h2>Book en tid</h2>
                 <form>
-                    <label for="name">Navn:</label>
-                    <input type="text" id="name" name="name"><br>
-                    
-                    <label for="email">E-mail:</label>
-                    <input type="email" id="email" name="email"><br>
-                    
-                    <label for="phone">Telefon:</label>
-                    <input type="tel" id="phone" name="phone"><br>
-                    <button type="submit" class="submit-button">Indsend</button>
+                    <label for="navn">Navn</label>
+                    <input type="text" id="navn" name="navn">
+                    <label for="e-mail">E-mail</label>
+                    <input type="text" id="e-mail" name="e-mail">
+                    <label for="telefon">Telefon nr</label>
+                    <input type="text" id="telefon" name="telefon">
+                    <input type="submit" value="Indsend">
                 </form>
             </section>
             <section class="footer-section contact-info">
                 <h2>Kontakt</h2>
-                <p>Kennedys<br>
-                   Astervej 9<br>
-                   8471 Sabro<br>
-                   Danmark<br>
-                   CVR-nummer: 28934874<br>
-                   Telefon nr: +4586495200<br>
-                   E-mail: salonen@kennedys.dk
-                </p>
+                <ul class="kontakt1">
+                    <li>Kennedys</li>
+                    <li>Astervej 9</li>
+                    <li>8471 Sabro</li>
+                    <li>Danmark</li>
+                    <li>CVR-nummer: 28934874</li>
+                </ul>
+                <ul class="kontakt2">
+                    <li>Telefon nr:</li>
+                    <li>+4586495200</li>
+                    <li>E-mail: </li>
+                    <li>salonen@kennedys.dk</li>
+                </ul>
             </section>
             <section class="footer-section logo-section">
                 <img src="../imgs/logo.footer.webp" alt="Kennedys Logo" class="footer-logo">
